# TheMindsEye

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
data/: community_ui_demo.json
docs/: AI_COMMUNITY_PIPELINE.md  ARCHITECTURE.md  CODEX_READINESS_CHECKLIST.md  COMMUNITY_PRODUCT_SPEC.md  CONSTITUTION.md  CORE_WORKSTREAMS.md  DATABASE_ARCHITECTURE.md  FEATURE_COVERAGE_MATRIX.md  IMPLEMENTATION_PROGRESS.md  NEXTJS_VERCEL_MIGRATION_PLAN.md  PRODUCT_PRIORITY_CAPTURE.md  PRODUCT_SPEC_V1.md  PROMPT_CONTRACTS.md  PR_REVIEW_CHECKLIST.md  ROADMAP.md  SANBORN_IMAGE_INTAKE.md  SANBORN_STITCHING_AND_GEOREFERENCING.md  SUPABASE_SETUP.md  TEXAS_PORTAL_INGESTION.md  TOWN_RECONSTRUCTION_WORKFLOW.md  WEB_APP_README.md
scripts/: build_sanborn_composite.py  export_sanborn_image_metadata.py  import_town.py  ingest_texas_portal.py  serve_community_app.py  serve_town_view.py  validate_mindseye.py  validate_sanborn_intake.py
supabase/: seed.sql
tests/: test_accessibility.py  test_ai_community_pipeline.py  test_assessment_evidence.py  test_building_data.py  test_campaign.py  test_community_dashboard.py  test_community_review.py  test_community_web_shell.py  test_import_town.py  test_instructional_alignment.py  test_map_auditor.py  test_map_engine.py  test_mission_seed.py  test_people_auditor.py  test_privacy.py  test_provenance.py  test_readiness.py  test_review_state.py  test_sanborn_assets.py  test_sanborn_georeference.py  test_sanborn_image_metadata.py  test_sanborn_intake.py  test_sanborn_manifest.py  test_sanborn_sheet_review.py  test_web_view.py  (+10 more)
(+229 files in other folders)
